# engine

./: .gitignore  CMakeLists.txt  Camera.cpp  Camera.h  Configuration.h  MeshRenderer.h  Model.cpp  Model.h  README  RenderMesh.cpp  RenderMesh.h  RenderText.cpp  RenderText.h  RenderTools.h  RenderUI.cpp  RenderUI.h  TextRenderer.h  UIRenderer.h  UiElements.cpp  UiElements.h  VertexDefinitions.h  camera.h  font.cpp  font.h  main.cpp  rendersource.cpp  rendersource.h  shaderprogram.cpp  shaderprogram.h  ui.cpp  ui.h
src/: .clang-format  Camera.cpp  Camera.h  Camera.hpp  Configuration.hpp  Model.cpp  Model.h  Model.hpp  RenderMesh.cpp  RenderMesh.h  RenderMesh.hpp  RenderTools.cpp  RenderTools.h  RenderTools.hpp  RenderUI.cpp  RenderUI.h  RenderUI.hpp  UiElements.cpp  UiElements.h  UiElements.hpp  VertexDefinitions.cpp  VertexDefinitions.h  VertexDefinitions.hpp  main.cpp
src/Renderer/: CMakeLists.txt
src/Renderer/src/: RenderTools.cpp
